Fixed all spotbugs errors related to test classes in the org.app.travelmode package.